a lot of cleaning up

--- a/index.html
+++ b/index.html
@@ -4,14 +4,22 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Memory Game</title>
+    <title>CSS Grid Memory Game</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <div id="game"></div>
+
+        <section>
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+        </section>
+
+
+    <ul id="game"></ul>
 
 
     <script src="script.js"></script>
