added button for each art genre, and color change for the cards

--- a/index.html
+++ b/index.html
@@ -11,16 +11,15 @@
 </head>
 <body>
 
+    <h1>Memory Game</h1>
 
-        <section>
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-        </section>
-
+    <section>
+        <button id="Surrealism">Surrealism</button>
+        <button id="Contemporary">Contemporary</button>
+        <button id="Portrait">Portrait</button>
+    </section>
 
     <ul id="game"></ul>
-
 
     <script src="script.js"></script>
 </body>
