learning more about css grid

--- a/grid-component/index.html
+++ b/grid-component/index.html
@@ -10,23 +10,34 @@
 </head>
 <body>
 
-<aside class="game">
+
+<div class="container">
 	<div class="header">
 		<div>Abstract</div>
 		<div>Impressionism</div>
 		<div>Portrait</div>
 		<div>Landscape</div>
 	</div>
-	<div class="cards-wrapper">
-		<div class="card"></div>
-		<div class="card"></div>
-		<div class="card"></div>
-		<div class="card"></div>
-		<div class="card"></div>
-		<div class="card"></div>
-		<div class="card"></div>
-	</div>
-</aside>
+	  <div class="grid">
+	  	<div></div>
+	  	<div></div>
+	  	<div></div>
+	  	<div></div>
+	  	<div></div>
+	  	<div></div>
+	  	<div></div>
+	  	<div></div>
+	  	<div></div>
+	  	<div></div>
+	  	<div></div>
+	  	<div></div>
+	  	<div></div>
+	  	<div></div>
+	  	<div></div>
+	  	<div></div>
+	  </div>
+</div>
+
 
     <script src="data.js"></script>
     <script src="script.js"></script>
