added and improved the functionality of the old header.

--- a/grid-component/index.html
+++ b/grid-component/index.html
@@ -13,29 +13,29 @@
 
 <div class="container">
 	<div class="header">
-		<div>Abstract</div>
-		<div>Impressionism</div>
-		<div>Portrait</div>
-		<div>Landscape</div>
+		<div><a id="abstract">Abstract</a></div>
+		<div><a id="impressionism">Impressionism</a></div>
+		<div><a id="landscape">Landscape</a></div>
+		<div class="active"><a id="portrait">Portrait</a></div>
 	</div>
-	  <div class="grid">
-	  	<div></div>
-	  	<div></div>
-	  	<div></div>
-	  	<div></div>
-	  	<div></div>
-	  	<div></div>
-	  	<div></div>
-	  	<div></div>
-	  	<div></div>
-	  	<div></div>
-	  	<div></div>
-	  	<div></div>
-	  	<div></div>
-	  	<div></div>
-	  	<div></div>
-	  	<div></div>
-	  </div>
+	<div class="grid">
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+	</div>
 </div>
 
 
