a lot of refactoring and improvements, mainly to the CSS.

--- a/index.html
+++ b/index.html
@@ -9,20 +9,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-     <div class="first">
-        <div class="second">
-                <ul id="buttons">
-                    <li class="btn"><a id="abstract">Abstract</a></li>
-                    <li class="btn"><a id="impressionism">Impressionism</a></li>
-                    <li class="btn"><a id="landscape">Landscape</a></li>
-                    <li class="btn active"><a id="portrait">Portrait</a></li>
-                </ul>
-            <div class="inner">
-		    <ul id="game"></ul>
-		    <p></p>
-            </div>
-        </div>
-    </div>
+
+
+<div class="container">
+	<div class="header">
+		<div class="btn"><a id="abstract">Abstract</a></div>
+		<div class="btn"><a id="impressionism">Impressionism</a></div>
+		<div class="btn"><a id="landscape">Landscape</a></div>
+		<div class="btn active"><a id="portrait">Portrait</a></div>
+	</div>
+	<div class="grid" id="game"></div>
+</div>
+
+
     <script src="data.js"></script>
     <script src="script.js"></script>
 </body>
