added painting info on match

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	</div>
 	<div class="grid" id="game"></div>
 </div>
+<div id="matched-image-info"></div>
 
 
     <script src="metadata.js"></script>
