--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
     <div id="last-artwork-matched">Last artwork matched: <span id="matched-image-title"></span> <span id="matched-image-info"></span></div>
     
     <script src="metadata.js"></script>
-    <script src="script.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
